--- a/frontend-keycloak-k8s/src/app/app.component.html
+++ b/frontend-keycloak-k8s/src/app/app.component.html
@@ -1,19 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/"><i class="far fa-list-alt"></i> List</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link"  routerLink="/create"><i class="fas fa-plus-circle"></i> New Product</a>
-      </li>
+<app-menu
+[isAdmin]="isAdmin"
+[isLogged]="isLogged"
+[username]="username"></app-menu>
 
-    </ul>
-  </div>
-</nav>
 <router-outlet></router-outlet>
